--- a/index.html
+++ b/index.html
@@ -1,10 +1,298 @@
-// Listen for native audio events to keep the UI in sync
-audio.addEventListener('play', () => {
-    document.getElementById('play-btn').textContent = '||'; // Show pause icon
-    appendLog("Playback started.");
-});
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>CarStereo AudioPlayer v2.4</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { background-color: #050505; color: #10b981; font-family: 'Courier New', Courier, monospace; }
+        .lcd-glow { text-shadow: 0 0 10px rgba(16, 185, 129, 0.5); }
+        .preset-btn { transition: all 0.2s; border: 2px solid #064e3b; background: #0a0a0a; position: relative; overflow: hidden; }
+        .preset-btn:active { background: #10b981; color: #000; transform: scale(0.95); }
+        .preset-label { font-size: 0.6rem; position: absolute; bottom: 2px; left: 0; right: 0; opacity: 0.6; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 0 4px; }
+        input[type=range] { accent-color: #10b981; height: 12px; }
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-thumb { background: #064e3b; border-radius: 4px; }
+    </style>
+</head>
+<body class="h-screen flex flex-col overflow-hidden">
 
-audio.addEventListener('pause', () => {
-    document.getElementById('play-btn').textContent = '▶'; // Show play icon
-    appendLog("Playback paused.");
-});
+    <header class="p-4 flex justify-between items-center border-b border-emerald-900/30">
+        <h1 class="text-xl font-bold tracking-tighter lcd-glow">CAR UNIT v2.4</h1>
+        <div class="flex gap-4 text-xs">
+            <button onclick="toggleView('library')" class="uppercase border border-emerald-900 px-3 py-1 rounded">Library</button>
+            <button onclick="toggleView('logs')" class="uppercase border border-emerald-900 px-3 py-1 rounded">Logs</button>
+        </div>
+    </header>
+
+    <main id="view-player" class="flex-1 flex flex-col p-4 gap-4">
+        <div class="flex-1 rounded-3xl border-2 border-emerald-900/50 bg-emerald-950/10 p-6 flex flex-col justify-center relative overflow-hidden">
+            <div class="absolute top-4 left-6 text-[10px] uppercase opacity-40 tracking-[0.2em]" id="mode-indicator">SYSTEM READY</div>
+            <div class="text-3xl font-bold truncate mb-2 lcd-glow" id="display-title">CAR STEREO</div>
+            <div class="text-lg opacity-60 truncate" id="display-subtitle">SELECT SOURCE</div>
+            
+            <div id="playback-info" class="mt-8">
+                <input type="range" id="seek-bar" class="w-full bg-emerald-900 rounded-lg appearance-none cursor-pointer" value="0">
+                <div class="flex justify-between text-xs mt-2 font-mono">
+                    <span id="current-time">00:00</span>
+                    <span id="duration">00:00</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-3 gap-3">
+            <button onmousedown="handlePresetStart(1)" onmouseup="handlePresetEnd(1)" ontouchstart="handlePresetStart(1)" ontouchend="handlePresetEnd(1)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-1">1<span class="preset-label" id="label-1"></span></button>
+            <button onmousedown="handlePresetStart(2)" onmouseup="handlePresetEnd(2)" ontouchstart="handlePresetStart(2)" ontouchend="handlePresetEnd(2)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-2">2<span class="preset-label" id="label-2"></span></button>
+            <button onmousedown="handlePresetStart(3)" onmouseup="handlePresetEnd(3)" ontouchstart="handlePresetStart(3)" ontouchend="handlePresetEnd(3)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-3">3<span class="preset-label" id="label-3"></span></button>
+            <button onmousedown="handlePresetStart(4)" onmouseup="handlePresetEnd(4)" ontouchstart="handlePresetStart(4)" ontouchend="handlePresetEnd(4)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-4">4<span class="preset-label" id="label-4"></span></button>
+            <button onmousedown="handlePresetStart(5)" onmouseup="handlePresetEnd(5)" ontouchstart="handlePresetStart(5)" ontouchend="handlePresetEnd(5)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-5">5<span class="preset-label" id="label-5"></span></button>
+            <button onmousedown="handlePresetStart(6)" onmouseup="handlePresetEnd(6)" ontouchstart="handlePresetStart(6)" ontouchend="handlePresetEnd(6)" class="preset-btn h-16 rounded-xl text-2xl font-bold" id="btn-6">6<span class="preset-label" id="label-6"></span></button>
+        </div>
+
+        <div class="h-28 flex gap-4 items-center">
+            <button onclick="prevTrack()" class="flex-1 h-full bg-zinc-900 rounded-2xl text-4xl border border-zinc-800 active:bg-zinc-800">⏮</button>
+            <button onclick="togglePlay()" id="play-btn" class="w-1/3 h-full bg-emerald-600 text-black rounded-2xl text-5xl shadow-lg active:bg-emerald-400">▶</button>
+            <button onclick="nextTrack()" class="flex-1 h-full bg-zinc-900 rounded-2xl text-4xl border border-zinc-800 active:bg-zinc-800">⏭</button>
+        </div>
+    </main>
+
+    <div id="overlay-library" class="fixed inset-0 bg-black z-50 p-6 hidden overflow-y-auto">
+        <div class="flex justify-between items-center mb-6">
+            <h2 class="text-2xl font-bold">SOURCES</h2>
+            <button onclick="toggleView('player')" class="text-3xl">✕</button>
+        </div>
+        <div id="library-content" class="space-y-6"></div>
+        <div class="mt-8 p-4 border border-emerald-900 rounded-xl bg-zinc-900/50">
+            <h3 class="text-sm uppercase mb-3 opacity-50">Add Radio Stream</h3>
+            <div class="flex flex-col gap-2">
+                <input type="text" id="radio-name" placeholder="Station Name" class="bg-black border border-emerald-900 p-2 rounded text-emerald-400">
+                <input type="text" id="radio-url" placeholder="URL (mp3/aac)" class="bg-black border border-emerald-900 p-2 rounded text-emerald-400">
+                <button onclick="addRadioStation()" class="bg-emerald-700 text-black font-bold p-2 rounded">ADD STATION</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="overlay-logs" class="fixed inset-0 bg-black z-50 p-6 hidden flex flex-col">
+        <div class="flex justify-between items-center mb-4">
+            <h2 class="text-2xl font-bold">LOGS v2.4</h2>
+            <button onclick="toggleView('player')" class="text-3xl">✕</button>
+        </div>
+        <div id="log-content" class="flex-1 bg-zinc-900 border border-emerald-900 rounded p-4 font-mono text-xs overflow-y-auto text-emerald-600"></div>
+    </div>
+
+    <audio id="audio-player" class="hidden"></audio>
+
+<script>
+    const BOOKMARKS_ENDPOINT = './api/bookmarks';
+    const USER_ID = new URLSearchParams(window.location.search).get('user') || 'default_stereo';
+    let state = { presets: {}, radioStations: [], books: {}, currentSource: null, playbackPositions: {}, longPressTimer: null, isHolding: false };
+    const audio = document.getElementById('audio-player');
+
+    function appendLog(msg) {
+        const log = document.getElementById('log-content');
+        const entry = document.createElement('div');
+        entry.textContent = `[${new Date().toLocaleTimeString()}] ${msg}`;
+        log.appendChild(entry);
+        log.scrollTop = log.scrollHeight;
+    }
+
+    // Keep play/pause button in sync with actual audio state
+    audio.addEventListener('play', () => { document.getElementById('play-btn').textContent = '||'; });
+    audio.addEventListener('pause', () => { document.getElementById('play-btn').textContent = '▶'; });
+
+    async function sync(method = 'GET', body = null) {
+        try {
+            const options = { method };
+            if (body) { options.headers = { 'Content-Type': 'application/json' }; options.body = JSON.stringify(body); }
+            const res = await fetch(`${BOOKMARKS_ENDPOINT}?user=${encodeURIComponent(USER_ID)}`, options);
+            return res.ok ? await res.json() : null;
+        } catch (e) { appendLog("Sync Error: " + e.message); return null; }
+    }
+
+    async function scanServer() {
+        appendLog("Scanning v2.4: /books...");
+        try {
+            const res = await fetch('./books/');
+            if (!res.ok) return appendLog("Error: /books not accessible.");
+            const text = await res.text();
+            const parser = new DOMParser();
+            const doc = parser.parseFromString(text, 'text/html');
+            const links = Array.from(doc.querySelectorAll('a')).map(a => a.getAttribute('href')).filter(h => h && !h.startsWith('?') && !h.startsWith('/'));
+
+            state.books = { "Library": [] };
+            for (const link of links) {
+                if (link.endsWith('/')) {
+                    const bookName = decodeURIComponent(link.replace(/\/$/, ''));
+                    const trackRes = await fetch(`./books/${link}`);
+                    const tracks = Array.from(parser.parseFromString(await trackRes.text(), 'text/html').querySelectorAll('a'))
+                        .map(a => a.getAttribute('href'))
+                        .filter(h => h.toLowerCase().endsWith('.mp3'))
+                        .map(h => ({ name: decodeURIComponent(h), url: `./books/${link}${h}` }));
+                    if (tracks.length > 0) state.books[bookName] = tracks;
+                } else if (link.toLowerCase().endsWith('.mp3')) {
+                    state.books["Library"].push({ name: decodeURIComponent(link), url: `./books/${link}` });
+                }
+            }
+            if (state.books["Library"].length === 0) delete state.books["Library"];
+            appendLog(`Scan complete. Found ${Object.keys(state.books).length} categories.`);
+            renderLibrary();
+        } catch (e) { appendLog("Scan failed: " + e.message); }
+    }
+
+    function playRadio(station) {
+        state.currentSource = { type: 'radio', data: station };
+        audio.src = station.url;
+        document.getElementById('display-title').textContent = station.name.toUpperCase();
+        document.getElementById('display-subtitle').textContent = "RADIO";
+        document.getElementById('playback-info').style.opacity = "0.2";
+        audio.play().catch(e => appendLog("Stream Error: " + e.message));
+        toggleView('player');
+    }
+
+    function playBook(bookName, trackIdx) {
+        const track = state.books[bookName][trackIdx];
+        state.currentSource = { type: 'book', data: { bookName, trackIdx, url: track.url, name: track.name } };
+        audio.src = track.url;
+        document.getElementById('display-title').textContent = track.name.toUpperCase();
+        document.getElementById('display-subtitle').textContent = bookName.toUpperCase();
+        document.getElementById('playback-info').style.opacity = "1";
+        const trackKey = `server:${track.url}`;
+        if (state.playbackPositions[trackKey]) audio.currentTime = state.playbackPositions[trackKey];
+        audio.play().catch(e => appendLog("Audio Error: " + e.message));
+        toggleView('player');
+    }
+
+    function deleteRadio(index) {
+        if (confirm(`Delete station "${state.radioStations[index].name}"?`)) {
+            state.radioStations.splice(index, 1);
+            saveAllData();
+            renderLibrary();
+            appendLog("Station deleted.");
+        }
+    }
+
+    function editRadio(index) {
+        const s = state.radioStations[index];
+        const newName = prompt("Edit Name:", s.name);
+        const newUrl = prompt("Edit URL:", s.url);
+        if (newName && newUrl) {
+            state.radioStations[index] = { name: newName, url: newUrl };
+            saveAllData();
+            renderLibrary();
+            appendLog("Station updated.");
+        }
+    }
+
+    function handlePresetStart(id) {
+        state.isHolding = false;
+        state.longPressTimer = setTimeout(() => {
+            if (state.currentSource) {
+                state.presets[id] = state.currentSource;
+                saveAllData();
+                document.getElementById(`btn-${id}`).classList.add('bg-emerald-400', 'text-black');
+                setTimeout(() => document.getElementById(`btn-${id}`).classList.remove('bg-emerald-400', 'text-black'), 500);
+                updatePresetLabels();
+                state.isHolding = true;
+                appendLog(`Preset ${id} assigned.`);
+            }
+        }, 1000);
+    }
+
+    function handlePresetEnd(id) {
+        clearTimeout(state.longPressTimer);
+        if (!state.isHolding && state.presets[id]) {
+            const p = state.presets[id];
+            p.type === 'radio' ? playRadio(p.data) : playBook(p.data.bookName, p.data.trackIdx);
+        }
+    }
+
+    function updatePresetLabels() {
+        for (let i = 1; i <= 6; i++) {
+            const label = document.getElementById(`label-${i}`);
+            const p = state.presets[i];
+            label.textContent = p ? (p.type === 'radio' ? p.data.name : p.data.name) : "";
+        }
+    }
+
+    function saveAllData() {
+        sync('POST', { presets: state.presets, radioStations: state.radioStations, playbackPositions: state.playbackPositions });
+    }
+
+    function renderLibrary() {
+        const container = document.getElementById('library-content');
+        container.innerHTML = '<h3 class="text-emerald-500 font-bold border-b border-emerald-900 pb-2">RADIO STATIONS</h3>';
+        state.radioStations.forEach((s, idx) => {
+            const div = document.createElement('div');
+            div.className = "flex flex-col bg-zinc-900 p-3 rounded-lg border border-zinc-800 mb-2";
+            div.innerHTML = `
+                <div class="flex justify-between items-center mb-2">
+                    <span class="font-bold">${s.name}</span>
+                    <div class="flex gap-2">
+                        <button onclick='playRadio(${JSON.stringify(s)})' class="bg-emerald-900 px-3 py-1 rounded text-xs">TUNE</button>
+                        <button onclick='editRadio(${idx})' class="bg-blue-900 px-2 py-1 rounded text-[10px]">EDIT</button>
+                        <button onclick='deleteRadio(${idx})' class="bg-red-900 px-2 py-1 rounded text-[10px]">DEL</button>
+                    </div>
+                </div>
+                <div class="text-[10px] opacity-40 truncate">${s.url}</div>
+            `;
+            container.appendChild(div);
+        });
+        Object.keys(state.books).forEach(bookName => {
+            const div = document.createElement('div');
+            div.className = "p-3 bg-zinc-900 rounded-lg border border-zinc-800 mt-4";
+            div.innerHTML = `<div class="font-bold mb-2">${bookName}</div>`;
+            state.books[bookName].forEach((t, i) => {
+                const btn = document.createElement('button');
+                btn.className = "block w-full text-left text-xs py-1 opacity-70 truncate";
+                btn.textContent = t.name;
+                btn.onclick = () => playBook(bookName, i);
+                div.appendChild(btn);
+            });
+            container.appendChild(div);
+        });
+    }
+
+    function toggleView(v) { 
+        document.getElementById('overlay-library').classList.toggle('hidden', v !== 'library');
+        document.getElementById('overlay-logs').classList.toggle('hidden', v !== 'logs');
+    }
+
+    function addRadioStation() {
+        const n = document.getElementById('radio-name').value;
+        const u = document.getElementById('radio-url').value;
+        if (n && u) { 
+            state.radioStations.push({ name: n, url: u }); 
+            saveAllData(); 
+            renderLibrary(); 
+            document.getElementById('radio-name').value = '';
+            document.getElementById('radio-url').value = '';
+        }
+    }
+
+    audio.ontimeupdate = () => {
+        document.getElementById('seek-bar').value = audio.currentTime;
+        document.getElementById('seek-bar').max = audio.duration || 0;
+        document.getElementById('current-time').textContent = formatTime(audio.currentTime);
+        document.getElementById('duration').textContent = formatTime(audio.duration);
+        if (state.currentSource?.type === 'book' && Math.floor(audio.currentTime) % 15 === 0) {
+            state.playbackPositions[`server:${state.currentSource.data.url}`] = audio.currentTime;
+            saveAllData();
+        }
+    };
+
+    function formatTime(s) { if (isNaN(s)) return "00:00"; const m = Math.floor(s/60); const sec = Math.floor(s%60); return `${m.toString().padStart(2,'0')}:${sec.toString().padStart(2,'0')}`; }
+    function togglePlay() { audio.paused ? audio.play() : audio.pause(); }
+    document.getElementById('seek-bar').oninput = (e) => audio.currentTime = e.target.value;
+
+    async function init() {
+        appendLog("System Init v2.4");
+        const data = await sync('GET');
+        if (data) { state.presets = data.presets || {}; state.radioStations = data.radioStations || []; state.playbackPositions = data.playbackPositions || {}; }
+        await scanServer();
+        updatePresetLabels();
+    }
+    init();
+</script>
+</body>
+</html>
