--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CarStereo Infotainment v4.0</title>
+    <title>CarStereo Infotainment v4.1</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -40,7 +40,7 @@
 
     <header class="flex justify-between items-center mb-6">
         <div>
-            <h1 class="text-2xl font-bold tracking-tight">INFOTAINMENT <span class="text-emerald-500 font-light">4.0</span></h1>
+            <h1 class="text-2xl font-bold tracking-tight">INFOTAINMENT <span class="text-emerald-500 font-light">4.1</span></h1>
             <p class="text-[10px] uppercase tracking-[0.3em] opacity-40">System Unified & Stable</p>
         </div>
         <div class="flex gap-3">
@@ -72,6 +72,11 @@
                 <input type="range" id="vol-control" min="0" max="1" step="0.05" value="1">
             </div>
 
+            <div class="grid grid-cols-2 gap-3">
+                <button onclick="setSleepTimer(15)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 15 mins</button>
+                <button onclick="setSleepTimer(30)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 30 mins</button>
+            </div>
+
             <div class="grid grid-cols-3 sm:grid-cols-6 gap-3">
                 <button onmousedown="handlePresetStart(1)" onmouseup="handlePresetEnd(1)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
                 <button onmousedown="handlePresetStart(2)" onmouseup="handlePresetEnd(2)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-2"><span class="text-xl font-bold">2</span><span class="preset-label truncate w-full px-2" id="label-2"></span></button>
@@ -85,11 +90,6 @@
                 <button onclick="smartSeek(-15)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏮</button>
                 <button onclick="togglePlay()" id="play-btn" class="w-1/3 glass-card bg-emerald-500 text-black text-4xl shadow-xl active:scale-95 transition-transform">▶</button>
                 <button onclick="smartSeek(30)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏭</button>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4">
-                <button onclick="setSleepTimer(15)" class="glass-card bg-white/5 py-4 text-sm font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 15 mins</button>
-                <button onclick="setSleepTimer(30)" class="glass-card bg-white/5 py-4 text-sm font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 30 mins</button>
             </div>
         </div>
     </main>
