--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <button onclick="setSleepTimer(15)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 15 mins</button>
                 <button onclick="setSleepTimer(30)" class="glass-card bg-white/5 py-3 text-xs font-semibold tracking-wide uppercase active:scale-95 transition-transform">Sleep in 30 mins</button>
             </div>
+            <div id="sleep-timer-display" class="text-[11px] font-semibold uppercase tracking-[0.2em] opacity-60 text-center">Sleep timer: Off</div>
 
             <div class="grid grid-cols-3 sm:grid-cols-6 gap-3">
                 <button onmousedown="handlePresetStart(1)" onmouseup="handlePresetEnd(1)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
@@ -130,6 +131,8 @@
     const seekBar = document.getElementById('seek-bar');
     const modeIndicator = document.getElementById('mode-indicator');
     const defaultModeText = modeIndicator.textContent;
+    const sleepDisplay = document.getElementById('sleep-timer-display');
+    const defaultSleepText = sleepDisplay.textContent;
 
     // UI Sync for Play/Pause Button
     audio.addEventListener('play', () => { document.getElementById('play-btn').textContent = '||'; });
@@ -339,7 +342,9 @@
         const remainingSeconds = Math.floor(remainingMs / 1000);
         const minutes = Math.floor(remainingSeconds / 60);
         const seconds = remainingSeconds % 60;
-        modeIndicator.textContent = `SLEEP: ${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+        const remainingLabel = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+        modeIndicator.textContent = `SLEEP: ${remainingLabel}`;
+        sleepDisplay.textContent = `Sleep timer: ${remainingLabel}`;
         if (remainingMs === 0) endSleepTimer();
     }
 
@@ -351,8 +356,12 @@
         sleepEndTime = null;
         audio.pause();
         modeIndicator.textContent = 'SLEEP TIMER ENDED';
+        sleepDisplay.textContent = 'Sleep timer: Ended';
         setTimeout(() => {
-            if (!sleepEndTime) modeIndicator.textContent = defaultModeText;
+            if (!sleepEndTime) {
+                modeIndicator.textContent = defaultModeText;
+                sleepDisplay.textContent = defaultSleepText;
+            }
         }, 3000);
     }
 
