--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CarStereo Infotainment v4.2</title>
+    <title>CarStereo Infotainment v4.3</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -40,7 +40,7 @@
 
     <header class="flex justify-between items-center mb-6">
         <div>
-            <h1 class="text-2xl font-bold tracking-tight">INFOTAINMENT <span class="text-emerald-500 font-light">4.2</span></h1>
+            <h1 class="text-2xl font-bold tracking-tight">INFOTAINMENT <span class="text-emerald-500 font-light">4.3</span></h1>
         </div>
         <div class="flex gap-3">
             <button onclick="toggleDayMode()" class="p-3 rounded-full bg-white/5 border border-white/10">☀️</button>
@@ -77,12 +77,12 @@
             <div id="sleep-timer-display" class="text-[11px] font-semibold uppercase tracking-[0.2em] opacity-60 text-center">Sleep timer: Off</div>
 
             <div class="grid grid-cols-3 sm:grid-cols-6 gap-3">
-                <button onmousedown="handlePresetStart(1)" onmouseup="handlePresetEnd(1)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
-                <button onmousedown="handlePresetStart(2)" onmouseup="handlePresetEnd(2)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-2"><span class="text-xl font-bold">2</span><span class="preset-label truncate w-full px-2" id="label-2"></span></button>
-                <button onmousedown="handlePresetStart(3)" onmouseup="handlePresetEnd(3)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-3"><span class="text-xl font-bold">3</span><span class="preset-label truncate w-full px-2" id="label-3"></span></button>
-                <button onmousedown="handlePresetStart(4)" onmouseup="handlePresetEnd(4)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-4"><span class="text-xl font-bold">4</span><span class="preset-label truncate w-full px-2" id="label-4"></span></button>
-                <button onmousedown="handlePresetStart(5)" onmouseup="handlePresetEnd(5)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-5"><span class="text-xl font-bold">5</span><span class="preset-label truncate w-full px-2" id="label-5"></span></button>
-                <button onmousedown="handlePresetStart(6)" onmouseup="handlePresetEnd(6)" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-6"><span class="text-xl font-bold">6</span><span class="preset-label truncate w-full px-2" id="label-6"></span></button>
+                <button onpointerdown="handlePresetStart(1)" onpointerup="handlePresetEnd(1)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-1"><span class="text-xl font-bold">1</span><span class="preset-label truncate w-full px-2" id="label-1"></span></button>
+                <button onpointerdown="handlePresetStart(2)" onpointerup="handlePresetEnd(2)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-2"><span class="text-xl font-bold">2</span><span class="preset-label truncate w-full px-2" id="label-2"></span></button>
+                <button onpointerdown="handlePresetStart(3)" onpointerup="handlePresetEnd(3)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-3"><span class="text-xl font-bold">3</span><span class="preset-label truncate w-full px-2" id="label-3"></span></button>
+                <button onpointerdown="handlePresetStart(4)" onpointerup="handlePresetEnd(4)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-4"><span class="text-xl font-bold">4</span><span class="preset-label truncate w-full px-2" id="label-4"></span></button>
+                <button onpointerdown="handlePresetStart(5)" onpointerup="handlePresetEnd(5)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-5"><span class="text-xl font-bold">5</span><span class="preset-label truncate w-full px-2" id="label-5"></span></button>
+                <button onpointerdown="handlePresetStart(6)" onpointerup="handlePresetEnd(6)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-6"><span class="text-xl font-bold">6</span><span class="preset-label truncate w-full px-2" id="label-6"></span></button>
             </div>
 
             <div class="flex gap-4 h-24">
@@ -249,6 +249,10 @@
             const p = state.presets[id];
             p.type === 'radio' ? playRadio(p.data) : playBook(p.data.bookName, p.data.trackIdx);
         }
+    }
+
+    function handlePresetCancel() {
+        clearTimeout(state.longPressTimer);
     }
 
     function updatePresetLabels() {
