Restore playback subtitle

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div class="p-4 sm:p-8">
                 <div class="mb-2 text-[10px] font-bold tracking-widest text-emerald-500 uppercase" id="mode-indicator">Connected</div>
                 <h2 class="text-3xl sm:text-5xl font-bold mb-2 tracking-tight truncate" id="display-title">Ready</h2>
+                <p class="text-xs sm:text-sm font-semibold tracking-[0.3em] opacity-60 truncate" id="display-subtitle">STANDBY</p>
             </div>
             
             <div class="w-full">
