--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
         .lib-p-active { background: var(--accent) !important; color: white !important; box-shadow: 0 0 15px var(--accent); border-color: transparent; }
         .preset-label { font-size: 0.65rem; font-weight: 600; text-transform: uppercase; opacity: 0.7; }
         
-        input[type=range]#seek-bar { 
+        input[type=range].seek-bar { 
             width: 100%; height: 12px; border-radius: 0; background: rgba(255,255,255,0.1); 
             appearance: none; outline: none; margin: 0; cursor: pointer;
         }
-        input[type=range]#seek-bar::-webkit-slider-thumb {
+        input[type=range].seek-bar::-webkit-slider-thumb {
             appearance: none; width: 24px; height: 24px; 
             background: var(--accent); border-radius: 50%; border: 2px solid white;
             box-shadow: 0 0 15px var(--accent);
+        }
+        input[type=range].vol-vertical {
+            writing-mode: bt-lr;
+            -webkit-appearance: slider-vertical;
+            width: 12px;
+            height: 100%;
+            margin: 0;
         }
     </style>
 </head>
@@ -61,14 +68,19 @@
                     <span id="current-time">00:00</span>
                     <span id="duration">00:00</span>
                 </div>
-                <input type="range" id="seek-bar" value="0" step="1">
+                <input type="range" id="seek-bar" class="seek-bar hidden sm:block" value="0" step="1">
             </div>
         </div>
 
         <div class="flex flex-col gap-6 px-2">
-            <div class="flex items-center gap-6">
+            <div class="sm:hidden flex flex-col gap-3">
+                <span class="text-[10px] font-black opacity-30 tracking-tighter">PROGRESS</span>
+                <input type="range" id="seek-bar-mobile" class="seek-bar" value="0" step="1">
+            </div>
+
+            <div class="hidden sm:flex items-center gap-6">
                 <span class="text-[10px] font-black opacity-30 tracking-tighter">VOL</span>
-                <input type="range" id="vol-control" min="0" max="1" step="0.05" value="1">
+                <input type="range" id="vol-control" class="vol-control" min="0" max="1" step="0.05" value="1">
             </div>
 
             <div class="grid grid-cols-2 gap-3">
@@ -86,10 +98,16 @@
                 <button onpointerdown="handlePresetStart(6)" onpointerup="handlePresetEnd(6)" onpointercancel="handlePresetCancel()" onpointerleave="handlePresetCancel()" class="preset-btn h-20 flex flex-col items-center justify-center gap-1" id="btn-6"><span class="text-xl font-bold">6</span><span class="preset-label truncate w-full px-2" id="label-6"></span></button>
             </div>
 
-            <div class="flex gap-4 h-24">
-                <button onclick="smartSeek(-15)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏮</button>
-                <button onclick="togglePlay()" id="play-btn" class="w-1/3 glass-card bg-emerald-500 text-black text-4xl shadow-xl active:scale-95 transition-transform">▶</button>
-                <button onclick="smartSeek(30)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏭</button>
+            <div class="flex gap-4 h-24 items-stretch">
+                <div class="flex flex-1 gap-4">
+                    <button onclick="smartSeek(-15)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏮</button>
+                    <button onclick="togglePlay()" id="play-btn" class="w-1/3 glass-card bg-emerald-500 text-black text-4xl shadow-xl active:scale-95 transition-transform">▶</button>
+                    <button onclick="smartSeek(30)" class="flex-1 glass-card bg-white/5 text-3xl active:scale-95 transition-transform">⏭</button>
+                </div>
+                <div class="sm:hidden flex flex-col items-center gap-2 w-10">
+                    <span class="text-[10px] font-black opacity-30 tracking-tighter">VOL</span>
+                    <input type="range" id="vol-control-mobile" class="vol-control vol-vertical" min="0" max="1" step="0.05" value="1">
+                </div>
             </div>
         </div>
     </main>
@@ -128,7 +146,8 @@
     let sleepIntervalId = null;
     let sleepEndTime = null;
     const audio = document.getElementById('audio-player');
-    const seekBar = document.getElementById('seek-bar');
+    const seekBars = Array.from(document.querySelectorAll('.seek-bar'));
+    const volumeControls = Array.from(document.querySelectorAll('.vol-control'));
     const modeIndicator = document.getElementById('mode-indicator');
     const defaultModeText = modeIndicator.textContent;
     const sleepDisplay = document.getElementById('sleep-timer-display');
@@ -176,15 +195,26 @@
     });
 
     // Seek Bar Logic
-    seekBar.addEventListener('mousedown', () => isDragging = true);
-    seekBar.addEventListener('touchstart', () => isDragging = true);
-    seekBar.addEventListener('input', (e) => { 
-        document.getElementById('current-time').textContent = formatTime(e.target.value); 
+    seekBars.forEach((bar) => {
+        bar.addEventListener('mousedown', () => isDragging = true);
+        bar.addEventListener('touchstart', () => isDragging = true);
+        bar.addEventListener('input', (e) => { 
+            document.getElementById('current-time').textContent = formatTime(e.target.value); 
+        });
+        bar.addEventListener('change', (e) => {
+            audio.currentTime = e.target.value;
+            isDragging = false;
+            savePosition();
+        });
     });
-    seekBar.addEventListener('change', (e) => {
-        audio.currentTime = e.target.value;
-        isDragging = false;
-        savePosition();
+
+    volumeControls.forEach((control) => {
+        control.addEventListener('input', (e) => {
+            audio.volume = e.target.value;
+            volumeControls.forEach((other) => {
+                if (other !== e.target) other.value = e.target.value;
+            });
+        });
     });
 
     async function sync(method = 'GET', body = null) {
@@ -355,8 +385,10 @@
 
     audio.ontimeupdate = () => {
         if (!isDragging) {
-            seekBar.value = audio.currentTime;
-            seekBar.max = audio.duration || 0;
+            seekBars.forEach((bar) => {
+                bar.value = audio.currentTime;
+                bar.max = audio.duration || 0;
+            });
             document.getElementById('current-time').textContent = formatTime(audio.currentTime);
             document.getElementById('duration').textContent = formatTime(audio.duration);
             if (state.currentSource?.type === 'book' && Math.floor(audio.currentTime) % 10 === 0) savePosition();
@@ -367,7 +399,6 @@
     function togglePlay() { audio.paused ? audio.play() : audio.pause(); }
     function toggleDayMode() { document.body.classList.toggle('day-mode'); }
     function smartSeek(s) { if (!audio.src || isNaN(audio.duration)) return; audio.currentTime = Math.max(0, Math.min(audio.currentTime + s, audio.duration)); savePosition(); }
-    document.getElementById('vol-control').oninput = (e) => audio.volume = e.target.value;
 
     function updateSleepIndicator() {
         if (!sleepEndTime) return;
