--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>CarStereo Infotainment v4.3</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Nixie+One&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/dseg7-classic" rel="stylesheet">
     <style>
         :root { 
@@ -26,7 +26,7 @@
         .preset-active { background: var(--accent) !important; color: white !important; box-shadow: 0 0 15px var(--accent); border-color: transparent; }
         .lib-p-active { background: var(--accent) !important; color: white !important; box-shadow: 0 0 15px var(--accent); border-color: transparent; }
         .preset-label { font-size: 0.65rem; font-weight: 600; text-transform: uppercase; opacity: 0.7; }
-        .time-display { font-family: 'DSEG7 Classic', 'Inter', sans-serif; letter-spacing: 0.12em; }
+        .time-display { font-family: 'Nixie One', 'DSEG7 Classic', 'Inter', sans-serif; letter-spacing: 0.12em; }
         
         input[type=range].seek-bar { 
             width: 100%; height: 12px; border-radius: 0; background: rgba(255,255,255,0.1); 
